# OpenSerialComms

./: .gitignore  LICENSE  README.md  project_outline.md  pyproject.toml
OpenSerialComms.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openserialcomms/: __init__.py  api.py  cli.py  tui.py
tests/: test-device.ipynb
